@@ -1,4 +1,6 @@
+DIST textext-0.3.3.tar.gz 9228 RMD160 869258925684e593ab4b5d19d3e230b67442c73d SHA1 4b14c892a8ab2e62a4d564b1d0886a7e2bf6bd1f SHA256 a9a4c8e846f146bf3ea9a4240add93576472edec58430562ad5a7f9b12671997
 DIST textext-0.4.2.tar.gz 7362 RMD160 d5dc0ae9cede4f59aadc6137781bcf78e162a35c SHA1 bd7521aaa2b6039a3d885d9c21fc70d93bcbe0e3 SHA256 3fb26ad87f37649b511ac0e9a89f9c33398a873403e150d4f054b76f7eb216f6
+EBUILD textext-0.3.3.ebuild 1056 RMD160 0d4bb864a5595c9ea2e9dd8efc12a42a25d35bb8 SHA1 eb18894ff54a8f426d96ce8ac9b0b65e3e49e59a SHA256 71bb37a16e9ea1d1ec1ce8ac7e60cd878a90064d9068159c4942e1ec7df3bfa3
 EBUILD textext-0.4.2.ebuild 1083 RMD160 c4a7f93ff79109d029100b31d2c14b0a0fc9744a SHA1 81276e15145746bed7df45df44f7e351f0752156 SHA256 6c5638a01fcc69f77d52750ba19f5ec9f615dfd0ff33d0383d66e5cacf56323a
-MISC ChangeLog 1123 RMD160 a621a4e5e1e5a17840b4fd9a74fb00d732407baa SHA1 9722e2045e4a532b0cc1c683ac3da9aa4eddd713 SHA256 c611b24a828ba2cfc8b55e248ad91993ed23e9ac5f4c19443c42c30574741185
+MISC ChangeLog 1273 RMD160 3ce5d3051e1b53cfc63bf738a4db2ab7d5d33bde SHA1 29edb78b15057f173e900ea3edf8c33403f5492e SHA256 1abc1f6422c1e4eb5a03fc966a8ec97d9c5a064d85541852d3142f9a36cb15b9
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
