@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 May 2008; Oliver Borm (boroli) <oli.borm@web.de> +textext-0.3.3.ebuild:
+  Added old version of textext-0.3.3 again for the stable inkscape-0.45
+
   13 May 2008; Oliver Borm (boroli) <oli.borm@web.de> -textext-0.4.1.ebuild,
   +textext-0.4.2.ebuild:
   New upstream release, Drop old version
